contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/contract_trait/fail/not_a_trait.rs
// UI (trybuild) negative test: `#[contract_trait]` must be applied to a trait.

#[common_macros::contract_trait]
pub struct NotATrait;

fn main() {}
