contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/contract_trait/fail/not_a_trait.stderr
error: custom attribute panicked
 --> tests/ui/contract_trait/fail/not_a_trait.rs:3:1
  |
3 | #[common_macros::contract_trait]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse trait definition: expected `trait`
